--- a/platform/linux/makefile
+++ b/platform/linux/makefile
@@ -30,6 +30,13 @@ OBJ_FILES_CORE := $(patsubst ./core/%.c,./out/objs/core/%.o,$(C_FILES_CORE))
 SHADER_FILES := $(shell find . -name "*.glsl")
 OBJ_SHADER_FILES := $(patsubst ./%.glsl,./out/objs/%.o,$(SHADER_FILES))
 
+VERTSHADER_FILES := $(shell find . -name "*.vert")
+VERTSPV_SHADER_FILES := $(patsubst ./%.vert,./out/objs/%.vert.spv,$(VERTSHADER_FILES))
+VERTOBJ_SHADER_FILES := $(patsubst %.spv,%.ov,$(VERTSPV_SHADER_FILES))
+
+FRAGSHADER_FILES := $(shell find . -name "*.frag")
+FRAGSPV_SHADER_FILES := $(patsubst ./%.frag,./out/objs/%.frag.spv,$(FRAGSHADER_FILES))
+FRAGOBJ_SHADER_FILES := $(patsubst %.spv,%.of,$(FRAGSPV_SHADER_FILES))
 
 C_MOD_FILES_CORE := $(filter ./src/CrystalCore/%.c,$(C_FILES_MOD))
 C_MOD_FILES_ALG := $(filter ./src/CrystalAlgorithms/%.c,$(C_FILES_MOD))
@@ -73,9 +80,21 @@ clean:
 
 debug:
 	@echo ===========
-	@echo $(OBJ_CORE_FILES_CORE)
-	@echo $(OBJ_FILES_CORE)
+	@echo $(VERTSPV_SHADER_FILES)
+	@echo $(VERTOBJ_SHADER_FILES)
 	@echo ===========
+
+./out/objs/shader/%.vert.spv : ./shader/%.vert
+	@./platform/linux/glslc $^ -o $@
+
+./out/objs/shader/%.frag.spv : ./shader/%.frag
+	@./platform/linux/glslc $^ -o $@
+
+./out/objs/shader/%.vert.ov : ./out/objs/shader/%.vert.spv
+	@ld -r -b binary $^ -o $@
+
+./out/objs/shader/%.frag.of : ./out/objs/shader/%.frag.spv
+	@ld -r -b binary $^ -o $@
 
 ./out/objs/shader/%.o : ./shader/%.glsl
 	@ld -r -b binary $^ -o $@
@@ -99,14 +118,14 @@ audio : $(OBJ_MOD_FILES_AUDIO) $(OBJ_CORE_FILES_AUDIO)
 	@ar rcs out/Linux/libCrystalAudio.a $(OBJ_CORE_FILES_AUDIO)
 	@gcc -shared -o out/Linux/CrystalAudio.so $(OBJ_MOD_FILES_AUDIO) $(INCLUDE_PATH) $(LIBRARIES)
 
-graphic : $(OBJ_MOD_FILES_GRC) $(OBJ_CORE_FILES_GRC) $(OBJ_SHADER_FILES)
+graphic : $(OBJ_MOD_FILES_GRC) $(OBJ_CORE_FILES_GRC) $(OBJ_SHADER_FILES) $(VERTOBJ_SHADER_FILES) $(FRAGOBJ_SHADER_FILES)
 	@ar rcs out/Linux/libCrystalGraphic.a $(OBJ_CORE_FILES_GRC)
-	@gcc -shared -o out/Linux/CrystalGraphic.so $(OBJ_MOD_FILES_GRC) $(OBJ_SHADER_FILES) $(INCLUDE_PATH) $(LIBRARIES)
+	@gcc -shared -o out/Linux/CrystalGraphic.so $(OBJ_MOD_FILES_GRC) $(OBJ_SHADER_FILES) $(VERTOBJ_SHADER_FILES) $(FRAGOBJ_SHADER_FILES) $(INCLUDE_PATH) $(LIBRARIES)
 
 build : clean core algorithms thread audio graphic
 	@gcc -o out/Linux/app.run $(APP_FILES) $(INCLUDE_PATH) -L./out/Linux $(APP_DEPENDS)
 
-run : build
+run :
 	@./out/Linux/app.run
 
 app :
